Created new menu bar

--- a/index.html
+++ b/index.html
@@ -12,23 +12,26 @@
     <link href="css/pauls.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="box">
-            <ul class="menu" data-inset="true">
-                <li><a href="index.html">Home</a></li>
-                <li></li>
-                <li><a href="work.html">Work</a></li>
-                <li></li>
-                <li><a href="pics.html">Pics</a></li>
-                <li></li>
-                <li><a href="about.html">About</a></li>
-                <li></li>
-                <li><a href="https://www.linkedin.com/in/ppettersen26">
-                    <img src="img/in.png" alt="LinkedIn" /></a></li>
-                <li></li>
-                <li><a href="https://500px.com/paulpettersen">
-                    <img src="img/500px.png" alt="500px" /></a></li>
-            </ul>
+
+    <header>        
+        <div id="fixed-Menu">
+            <div id="fm-wrapper">
+                <ul class="menu" data-inset="true">
+                    <li><a href="index.html">Home</a></li>
+                    <li></li>
+                    <li><a href="work.html">Work</a></li>
+                    <li></li>
+                    <li><a href="pics.html">Pics</a></li>
+                    <li></li>
+                    <li><a href="about.html">About</a></li>
+                    <li></li>
+                    <li><a href="https://www.linkedin.com/in/ppettersen26" target="_blank">
+                        <img src="img/in.png" alt="LinkedIn" /></a></li>
+                    <li></li>
+                    <li><a href="https://500px.com/paulpettersen" target="_blank">
+                        <img src="img/500px.png" alt="500px" /></a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
