--- a/pics.html
+++ b/pics.html
@@ -13,22 +13,26 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
-    <header>
-        <div class="box">
+    <header>        
+        <div id="fixed-Menu">
+            <div id="fm-wrapper">
                 <ul class="menu" data-inset="true">
                     <li><a href="index.html">Home</a></li>
-                    <li></li>    
+                    <li></li>
                     <li><a href="work.html">Work</a></li>
                     <li></li>
                     <li><a href="pics.html">Pics</a></li>
-                    <li></li> 
+                    <li></li>
                     <li><a href="about.html">About</a></li>
                     <li></li>
-                    <li><a href="https://www.linkedin.com/in/ppettersen26"><img  src="img/in.png" alt="LinkedIn" /></a></li>
+                    <li><a href="https://www.linkedin.com/in/ppettersen26" target="_blank">
+                        <img src="img/in.png" alt="LinkedIn" /></a></li>
                     <li></li>
-                    <li><a href="https://500px.com/paulpettersen"><img  src="img/500px.png" alt="500px" /></a></li>
+                    <li><a href="https://500px.com/paulpettersen" target="_blank">
+                        <img src="img/500px.png" alt="500px" /></a></li>
                 </ul>
-       </div>     
+            </div>
+        </div>
     </header>
 
     <div class="brand">Pics Page</div>
