Modifies about page.

--- a/about.html
+++ b/about.html
@@ -43,8 +43,10 @@
          
     <div class="row" id="more">
         <div class="box">
-           <p>After receiving a Bachelor&#39s degree in computer science at Northeastern Illinois University, 
-               I was hired by Allstate Insurance to work in Life systems. My tasks included:</p>
+           <p>I received a Bachelor&#39s degree in Computer Science at Northeastern Illinois University after 
+               completing a double major of Business Administration and Computer Science.
+               Allstate Insurance then hired me after graduation to work in Life Systems. Allstate promoted me several
+                times and I had the opportunity to work on a variety of tasks. Some include:</p>
                <ul>
                 <li>Project lead, Requirements Definition, Analysis and design</li>
                 <li>Debugging & Troubleshooting</li>
@@ -61,16 +63,17 @@
                 the first certified female chef in the Midwest. Cooking must be in my blood too! My family 
                 includes a chef who worked at the American Embassy in Oslo, Norway! After marrying I moved to 
                 Michigan where I cooked professionally and also did IT consulting work. </p>
-            <p>My roles as a chef included:</p>
+            <p>My culinary experience include:</p>
             <ul>
                 <li>Baker</li>
                 <li>Line Cook in a resort area</li>
                 <li>Prep Cook</li>
                 <li>Sous Chef for a retirement home (Kitchen manager)</li>
-                <li>Recipes developed for special dietary needs.</li>
+                <li>Manager of entire kitchen and dining room staff</li>
+                <li>Recipe developer for special dietary needs</li>
             </ul>
             <p>Computers were never far from my mind either. I worked on storage methods for my vast 
-                library of recipes. I createdd ways to calculate portions and nutritional values because of 
+                library of recipes. I created ways to calculate portions and nutritional values because of 
                 special dietary needs. A lot of my work was done with Visual Basic, stand-alone apps through 
                 Excel macros. In the kitchen I worked on inventory, scheduling and ordering systems. 
                 Other consulting work I did was set up a network for a medical practice and a database for a local 
@@ -81,8 +84,8 @@
                 <li>Culinary instructor for a middle school</li>
                 <li>Scout leader</li>
             </ul>
-            <p>In 2010 I decided to return to college for another Bachelor&#39s degree. I wanted to update my skills 
-                and learn new skills. Learning Web tools and .Net has been good for me to continue with projects 
+            <p>In 2010 I decided to return to Baker College for another Bachelor&#39s degree. I wanted to update my skills 
+                and learn new skills. Learning Web tools and .Net has been useful for continuing with my projects 
                 since then. I have learned C# and have really expanded my experience with SQL.</p> 
                 
             <p>Technologies I have used since then include:</p>            
@@ -104,7 +107,7 @@
             </ul>
             <p>I continue using my photography to document recipes and cooking methods, and have enjoyed 
                 landscape and close-up work. This came in handy to document culinary prep and in Web design. 
-                Originally I had a dark room but now my dark room is my computer using Photoshop where I can be 
+                I&#39ve gone from a dark room in my parents home to my computer where I use Photoshop to be 
                 even more creative.</p>
             <p>My Web and Image design include:</p>
             <ul>
@@ -116,9 +119,9 @@
                 with culinary dietary design. I appreciate a well-designed project that is tested well 
                 and a responsive design.</p>
  
-            <p>If you wish to contact me with feedback or would like a complete resume,
-            I can be reached at <a href="mailto:ppettersen26@gmail.com">ppettersen26@gmail.com</a></p>
-            <div class="about-bar">Thank you for visiting.</div>
+            <p>Thank you for visiting. Please contact me with feedback or if you would like a complete resume,
+            email me at <a href="mailto:ppettersen26@gmail.com">ppettersen26@gmail.com</a></p>
+            <div class="about-bar"></div>
         </div>
     </div>   
         <div class="centerimg">
